Overflow style fix for author info

--- a/core/static/css/v2/layout/components/main-content/author-info.less
+++ b/core/static/css/v2/layout/components/main-content/author-info.less
@@ -21,6 +21,7 @@
     &.primary {
       background: #B25B46;
       padding: 10px;
+      white-space: normal;
     }
   }
   .author-name {
